--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,34 +1,30 @@
 spring:
   application:
-    # 应用名称
     name: qevis-java
 
   datasource:
-    # 数据库驱动：
     driver-class-name: com.mysql.cj.jdbc.Driver
-    # 数据源名称
     name: defaultDataSource
-    # 数据库连接地址
-    url: jdbc:mysql://10.16.71.4:3306/qevis_db?serverTimezone=UTC&rewriteBatchedStatements=true
 
-    # 数据库用户名&密码：
-    username: qevis
-    password: qevis
+    # You need to replace the placeholder `<your_ip>` and `<your_port>`.
+    url: jdbc:mysql://<your_ip>:<your_port>/qevis_db?serverTimezone=UTC&rewriteBatchedStatements=true
+    username: qevis_user
+    password: qevis_pwd
 
     druid:
-      initialSize: 5 #初始化时建立物理连接的个数。初始化发生在显示调用init方法，或者第一次getConnection时
-      minIdle: 5  #最小连接池数量
-      maxActive: 20 #最大连接池数量
-      maxWait: 60000 #获取连接时最大等待时间，单位毫秒。配置了maxWait之后，缺省启用公平锁，并发效率会有所下降，如果需要可以通过配置useUnfairLock属性为true使用非公平锁。
+      initialSize: 5
+      minIdle: 5
+      maxActive: 20
+      maxWait: 60000
       timeBetweenEvictionRunsMillis: 60000
       minEvictableIdleTimeMillis: 300000
       validationQuery: SELECT 1
       testWhileIdle: true
       testOnBorrow: true
       testOnReturn: false
-      poolPreparedStatements: true  #是否缓存preparedStatement，也就是PSCache。
+      poolPreparedStatements: true
       maxPoolPreparedStatementPerConnectionSize: 20
-      filters: stat,wall  #属性类型是字符串，通过别名的方式配置扩展插件
+      filters: stat,wall
       use-global-data-source-stat: true
       connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
@@ -37,10 +33,9 @@ mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
-    cache-enabled: true #开启二级缓存
+    cache-enabled: true
 
 server:
-  # 应用服务 WEB 访问端口
   port: 12000
   compression:
     enabled: true
